# core

./: .gitignore  CMakeLists.txt  LICENSE  README.md  core.c  core.h
include/: core.h  core_file.h  core_linkedlist.h  core_map.h  core_oop.h  core_string.h  core_vector.h
src/: core_file.c  core_linkedlist.c  core_map.c  core_oop.c  core_string.c  core_vector.c
testing/: core_file_testing.c  core_map_testing.c  core_string_testing.c  core_vector_testing.c  test_read.txt  test_read2.txt
